@@ -26,6 +26,8 @@ LINTIAN_PROFILE=debian
 LINTIAN_INTERNAL_TESTSUITE=1
 NO_PKG_MANGLE=true
 unset MAKEFLAGS
+# Ensure Lintian works without $ENV{HOME}
+unset HOME
 
 [ "$TEST_WORK_DIR" ] || TEST_WORK_DIR="debian/test-out"
 
